@@ -228,6 +228,89 @@ operator|=
 name|D
 expr_stmt|;
 block|}
+comment|/** Construct the most accurate normalized, vertical plane given a set of points.  If none of the points can determine   * the plane, return null.   */
+DECL|method|constructNormalizedVerticalPlane
+specifier|public
+specifier|static
+name|Plane
+name|constructNormalizedVerticalPlane
+parameter_list|(
+specifier|final
+name|Vector
+modifier|...
+name|planePoints
+parameter_list|)
+block|{
+comment|// Pick the best one (with the greatest x-y distance)
+name|double
+name|bestDistance
+init|=
+literal|0.0
+decl_stmt|;
+name|Vector
+name|bestPoint
+init|=
+literal|null
+decl_stmt|;
+for|for
+control|(
+specifier|final
+name|Vector
+name|point
+range|:
+name|planePoints
+control|)
+block|{
+specifier|final
+name|double
+name|pointDist
+init|=
+name|point
+operator|.
+name|x
+operator|*
+name|point
+operator|.
+name|x
+operator|+
+name|point
+operator|.
+name|y
+operator|*
+name|point
+operator|.
+name|y
+decl_stmt|;
+if|if
+condition|(
+name|pointDist
+operator|>
+name|bestDistance
+condition|)
+block|{
+name|bestDistance
+operator|=
+name|pointDist
+expr_stmt|;
+name|bestPoint
+operator|=
+name|point
+expr_stmt|;
+block|}
+block|}
+return|return
+name|constructNormalizedVerticalPlane
+argument_list|(
+name|bestPoint
+operator|.
+name|x
+argument_list|,
+name|bestPoint
+operator|.
+name|y
+argument_list|)
+return|;
+block|}
 comment|/** Construct a normalized, vertical plane through an x-y point.  If the x-y point is at (0,0), return null.   */
 DECL|method|constructNormalizedVerticalPlane
 specifier|public
